# Poxicle

./: .gitignore  README.md  install.sh  lsan.supp  meson.build  meson_options.txt
configurator/: main.c  meson.build  org.ninez.PoxicleConfig.desktop  pox-apps-page.c  pox-cells.c  pox-cells.h  pox-config.h  pox-io.c  pox-prefs-page.c  pox-presets-page.c
demo/: host.c  main.c
docs/: architecture.gen.html  architecture.md  build.gen.html  build.md  chiguiro-compositor-handoff.md  configuration.gen.html  configuration.md  configurator.gen.html  configurator.md  gnome-extension.gen.html  gnome-extension.md  gobject-binding.gen.html  gobject-binding.md  index.html  kwin-effect-handoff.md  kwin-effect.gen.html  kwin-effect.md  poxbridge.gen.html  poxbridge.md  renderer.gen.html  renderer.md  simulation-core.gen.html  simulation-core.md  wayland-backend.gen.html  wayland-backend.md
docs/img/: README.md
gnome/: README.md  install.sh
gnome/poxicle@nine7nine.github.com/: config.js  extension.js  metadata.json
include/: pox-gobject.h  poxicle-gl.h  poxicle-wl.h  poxicle.h
kwin/: CMakeLists.txt  README.md  install.sh  run-nested-chiguiro.sh  run-nested.sh
kwin/poxio-test/: poxbridge-test.cpp
kwin/src/: kcm-poxicle.json  metadata.json  poxbridge.h  poxconfig.cpp  poxconfig.h  poxicleeffect.cpp  poxicleeffect.h  poxiclekcm.cpp  poxiclekcm.h
src/: pox-gobject.c  poxicle-gl.c  poxicle-wl.c  poxicle.c
